force-app/main/default/objects/AVO_County__c/AVO_County__c.object-meta.xml
<CustomObject>
    <label>County</label>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>