force-app/main/default/objects/AVO_County__c/fields/AVO_24_Coastal__c.field-meta.xml
<CustomField>
    <fullName>AVO_24_Coastal__c</fullName>
    <label>24 Coastal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>