force-app/main/default/objects/AVO_County__c/fields/AVO_cou__c.field-meta.xml
<CustomField>
    <fullName>AVO_cou__c</fullName>
    <label>cou</label>
    <length>255</length>
    <type>Text</type>
</CustomField>