force-app/main/default/objects/AVO_County__c/fields/AVO_County__c.field-meta.xml
<CustomField>
    <fullName>AVO_County__c</fullName>
    <label>County #</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>