force-app/main/default/objects/AVO_County__c/fields/AVO_EPDdistrict__c.field-meta.xml
<CustomField>
    <fullName>AVO_EPDdistrict__c</fullName>
    <label>EPDdistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>