force-app/main/default/objects/AVO_County__c/fields/AVO_Field_Specialist__c.field-meta.xml
<CustomField>
    <fullName>AVO_Field_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Counties</relationshipName>
    <type>Lookup</type>
</CustomField>