force-app/main/default/objects/AVO_County__c/fields/AVO_FIPS__c.field-meta.xml
<CustomField>
    <fullName>AVO_FIPS__c</fullName>
    <label>FIPS</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>