force-app/main/default/objects/AVO_County__c/fields/AVO_LatLimitSouth__c.field-meta.xml
<CustomField>
    <fullName>AVO_LatLimitSouth__c</fullName>
    <label>LatLimitSouth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>