force-app/main/default/objects/AVO_County__c/fields/AVO_LonLimitEast__c.field-meta.xml
<CustomField>
    <fullName>AVO_LonLimitEast__c</fullName>
    <label>LonLimitEast</label>
    <length>250</length>
    <type>Text</type>
</CustomField>