force-app/main/default/objects/AVO_County__c/fields/AVO_LonLimitWest__c.field-meta.xml
<CustomField>
    <fullName>AVO_LonLimitWest__c</fullName>
    <label>LonLimitWest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>