force-app/main/default/objects/AVO_County__c/fields/AVO_SWP_Regions__c.field-meta.xml
<CustomField>
    <fullName>AVO_SWP_Regions__c</fullName>
    <label>SWP Regions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>