force-app/main/default/objects/AVO_County__c/fields/AVO_USGS_Subunit_s__c.field-meta.xml
<CustomField>
    <fullName>AVO_USGS_Subunit_s__c</fullName>
    <label>USGS Subunit(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>