force-app/main/default/objects/AVO_County__c/fields/AVO_Water_Zones__c.field-meta.xml
<CustomField>
    <fullName>AVO_Water_Zones__c</fullName>
    <label>Water Zones</label>
    <length>250</length>
    <type>Text</type>
</CustomField>