force-app/main/default/objects/AVO_County__c/recordTypes/County.recordType-meta.xml
<RecordType>
    <fullName>County</fullName>
    <active>true</active>
    <label>County</label>
</RecordType>